--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-design-icons/font": "^0.14.13",
     "classnames": "^2.5.1",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
