--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-design-icons/font": "^0.14.13",
     "classnames": "^2.5.1",
     "framer-motion": "^11.0.3",
+    "gamecontroller.js": "^1.5.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
