--- a/package.json
+++ b/package.json
@@ -6,17 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@material-design-icons/font": "^0.14.13",
     "@material-design-icons/svg": "^0.14.13",
+    "@svgr/webpack": "^8.1.0",
+    "@types/jest": "^29.5.12",
     "classnames": "^2.5.1",
     "framer-motion": "^11.0.3",
     "gamecontroller.js": "^1.5.0",
+    "jest": "^29.7.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/node": "^20",
