wip: poc for extending emotion css with 4k thing. need to test with static build.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    // "target": "es2015" added by me to allow for destructuring
+    // IterableIterator in for...of loops.
+    "target": "es2015",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
