--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@babylonjs/core": "^6.42.0",
+    "@babylonjs/gui": "^6.42.0",
     "@emotion/css": "^11.11.2",
     "@material-design-icons/svg": "^0.14.13",
     "@svgr/webpack": "^8.1.0",
@@ -21,6 +23,7 @@
     "jest": "^29.7.0",
     "next": "14.1.0",
     "react": "^18",
+    "react-babylonjs": "^3.1.27",
     "react-dom": "^18",
     "ts-node": "^10.9.2"
   },
