--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@babylonjs/core": "^6.42.0",
-    "@babylonjs/gui": "^6.42.0",
     "@emotion/css": "^11.11.2",
     "@material-design-icons/svg": "^0.14.13",
+    "@react-three/drei": "^9.97.3",
+    "@react-three/fiber": "^8.15.16",
     "@svgr/webpack": "^8.1.0",
     "@types/jest": "^29.5.12",
     "classnames": "^2.5.1",
@@ -23,8 +23,8 @@
     "jest": "^29.7.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-babylonjs": "^3.1.27",
     "react-dom": "^18",
+    "three": "^0.161.0",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
