--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-three/fiber": "^8.15.16",
     "@svgr/webpack": "^8.1.0",
     "@types/jest": "^29.5.12",
+    "@types/three": "^0.161.2",
     "classnames": "^2.5.1",
     "framer-motion": "^11.0.3",
     "gamecontroller.js": "^1.5.0",
