--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
       { "avoidEscape": true, "allowTemplateLiterals": true }
     ],
     "react/no-unescaped-entities": 0,
-    "semi": [2, "always"]
+    "semi": [2, "always"],
+    "no-unused-vars": 2
   }
 }
