--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react": "^18",
     "react-dom": "^18",
     "three": "^0.161.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript-eslint": "^7.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
