fix: lint errors + make nextjs Images priority by default

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,8 @@
       "error",
       {
         "args": "after-used",
-        "argsIgnorePattern": "^_"
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_"
       }
     ]
   }
