--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^29.5.12",
     "@types/three": "^0.161.2",
     "classnames": "^2.5.1",
+    "eslint-plugin-styled-components": "^0.0.0",
     "framer-motion": "^11.0.3",
     "gamecontroller.js": "^1.5.0",
     "jest": "^29.7.0",
