--- a/package.json
+++ b/package.json
@@ -16,31 +16,31 @@
     "@react-three/drei": "^9.97.3",
     "@react-three/fiber": "^8.15.16",
     "@react-three/rapier": "^1.2.1",
-    "@svgr/webpack": "^8.1.0",
-    "@types/jest": "^29.5.12",
     "@types/three": "^0.161.2",
     "classnames": "^2.5.1",
-    "eslint-plugin-styled-components": "^0.0.0",
     "framer-motion": "^11.0.3",
     "gamecontroller.js": "^1.5.0",
-    "jest": "^29.7.0",
     "moment": "^2.30.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "three": "^0.161.0",
-    "ts-node": "^10.9.2",
-    "typescript-eslint": "^7.0.2"
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "eslint-plugin-styled-components": "^0.0.0",
+    "jest": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^7.0.2"
   }
 }
