--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "prepare": "husky || true",
     "build": "next build",
-    "start": "next start",
+    "check-types": "tsc --noEmit",
+    "dev": "next dev",
     "lint": "next lint",
+    "start": "next start",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -28,6 +30,8 @@
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.0.3",
+    "@commitlint/config-conventional": "^19.0.3",
     "@svgr/webpack": "^8.1.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
@@ -37,6 +41,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-styled-components": "^0.0.0",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
