--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-swipeable": "^7.0.1",
     "three": "^0.161.0",
     "ts-node": "^10.9.2"
   },
